--- a/css/layout.css
+++ b/css/layout.css
@@ -1,80 +1,73 @@
-.logIn {
-    position: relative;    
-    background: #FFFFFF;
+.logIn { 
     width: 360px;
     margin: 0 auto 100px;
     padding: 50px;
-    text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .logIn input {
-    position: relative;
     outline: 0;
-    background: #f2f2f2;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
     padding: 15px;
     box-sizing: border-box;
-    font-size: 14px;
 }
 .logIn input[type=submit] {
-    position: relative;
-    text-transform: uppercase;
     outline: 0;
-    background: #444;
     width: 100%;
     border: 0;
     padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
     cursor: pointer;
 }
+
+.update{ 
+    width: 360px;
+    margin: 0 auto 100px;
+    padding: 50px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.update {
+    outline: 0;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+}
+.update input[type=submit] {
+    outline: 0;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    cursor: pointer;
+}
+
 .signUp {
-    position: relative;    
-    background: #FFFFFF;
     max-width: 360px;
     margin: 0 auto 100px;
     padding: 50px;
-    text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .signUp input {
     outline: 0;
-    background: #f2f2f2;
     width: 100%;
     border: 0;
     margin: 0 0 15px;
     padding: 15px;
     box-sizing: border-box;
-    font-size: 14px;
 }
 .signUp input[type=submit] {
-    text-transform: uppercase;
     outline: 0;
-    background: #444;
     width: 100%;
     border: 0;
     padding: 15px;
-    color: #FFFFFF;
-    font-size: 14px;
-  cursor: pointer;
-}
-.logIn h6{
-    font-size: 15px;
-}
-.signUp h6{
-    
+    cursor: pointer;
 }
 body{
     margin: 0;
     padding: 0;
 }
 .gallery-page{
-/*
-    width: 100%;
-    height: 100%;
-*/
     margin-left: 150px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -82,13 +75,12 @@ body{
 h6{
     margin-top: auto;
     margin-bottom: 10px;
-    font-size: 20px;
 }
 .main-header{
     height: 100px;
     margin-bottom: 15px;
     padding-bottom: 40px;
-    width: 100%
+    width: 100%;
 }
 .footer{
     height: 80px;
@@ -97,74 +89,28 @@ h6{
     height: 120px;
     width: 190px;
 }
-
-    display: block;
-    position: absolute;
-    left: auto;
-}
-.sample .btn{
-    position: absolute;
-    top: 90%;
-    left: 50%;
-    transform: translate(-60%, -60%);
-    -ms-transform: translate(-50%, -60%);
-    background-color: #5555;
-    color: white;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    
-}
-.gallery-page .btn:hover {
-  background-color: white;
-}
-
-
-.imgContainer2 input{
-    top: 57%;
-    left: 20%;
-    transform: translate(-160%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: white;
-    color: black;
-    font-size: 16px;
-    border-width: thin;
-    border-color: black;
-    cursor: pointer;
-    border-radius: 5px;
-    width: 100px;
-}
-
 .nav {
     color: white;
-    text-align: right;
     height: 40px;
-    line-height: 30px;
 }
-
 .menu {
     margin-left: 150px;
-    margin-top: -51px;
+    margin-top: -54px;
     border: none;
-    font-size: 20px;
+    padding-bottom: -20px;
 }
 .menu a {
     clear: right;
-    text-decoration: none;
     color: white;
     margin: 0 10px;
     line-height: 70px;
 }
-
 .nav label {
-    
     margin: 0 40px 0 0;
-    font-size: 26px;
     line-height: 60px;
     display: none;
     width: 30px;
-    float: left;
+    float: right;
 }
 #toggle {
     display: none;
@@ -180,30 +126,321 @@ h6{
     
 
 }
-/*
-.gallery-page .Sample1{
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: 1fr 1fr;
-}
-*/
 .gallery-page img{
     margin-left: 30px;
     height: 90%;
     width: 90%;
     margin-top: 10px;
 }
-header{
-    width: 1000px;
+.ImgHo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 54.7%;
+    margin-top: 50px;
+}
+.ImgHoBot {
+    display: block;
+    margin-top: 50px;
+    margin-left: 550px;
+    margin-bottom: 50px;
+}
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.grid-container{
+    display: grid;
+    grid-template-areas:
+    'header header header header header header'
+    'menu main main main main main'
+    'menu footer footer footer footer footer';
+    grid-gap: 10px;
+    padding: 10px;
+    background-color: white;
+    margin-top: 70px;
+    margin-bottom: 10px;
+}
+.grid-container > div {
+    padding: 20px 0;
+}
+.admin { 
+    width: 360px;
+    margin: 0 auto 100px;
+    padding: 50px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.admin input {
+    outline: 0;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+}
+.admin input[type=submit] {
+    outline: 0;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    cursor: pointer;
 }
 
-@media only screen and (max-width: 550px) {
+/*upload and update button (profile)*/
+.profButton input[type=submit]{
+     text-transform: uppercase;
+  outline: 0;
+  width: 200px;
+  border: 0;
+  padding: 8px;
+  font-size: 14px;
+  cursor: pointer;
+}
+/*upload Button*/
+.profButton .uploadButton{
+    margin-top: 200px;
+}
+
+.imgProfilePic{
+    width:auto;
+    height: auto;
+    margin-left: 50px;
+}
+
+.profile-container p{
+    font-size: 25px;
+     margin-top: 20px;
+     
+     margin-left:150px;
+}
+
+.profile-container{
+    
+    text-align: left;
+    float: right;
+    margin-left: -50px;
+    margin-top: 40px;
+}
+.row {
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.column {
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+    font-size: 15px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    
+}
+
+.imgProfilePic{
+    width: 30%;
+    float: left;
+    border-radius: 50%;
+}
+/*Breadcrumbs*/
+ul.breadcrumb {
+    padding: 5px 16px;
+    list-style: none;
+    margin-top:35px;
+}
+
+ul.breadcrumb li {
+    display: inline;
+    font-size: 18px;
+}
+
+ul.breadcrumb li+li:before {
+    padding: 8px;
+    content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+    text-decoration: none;
+}
+
+ul.breadcrumb li a:hover {
+    text-decoration: underline;
+}
+.item1 h4{
+    margin-top: -10px;
+}
+
+.item1 { 
+    grid-area: menu; 
+}
+
+.item3 {
+    grid-area:main;
+}
+.tab button {
+    float: right;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+.tabcontent {
+    text-align: center;
+    display: none;
+    padding: 6px 60px;
+    border: 1px solid #ccc;
+    border-top: none;
+    padding-top: 0px;
+}
+
+.tab {
+    float:none;
+    overflow: hidden;
+    border: none;
+    align-content: center;
+    position:inherit;
+    text-align: center;
+}
+\*HOME CSS*\
+
+
+
+
+
+
+.ImgHo {
+    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    
+    margin-top: 50px;
+
+
+
+}
+
+.ImgHoBot {
+    
+    display: block;
+    margin-top: 50px;
+    margin-left: 400px;
+    margin-right: auto;
+    margin-bottom: 50px;
+    
+
+}
+
+.SL {
+    width: 15%;
+    float: right;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -50px;
+}
+
+.HtoA {
+    
+    text-align: center;
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    height: 50px;
+}
+
+.center {
+    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    margin-top: 25px;
+    
+    
+}
+
+.titles {
+    
+    margin-left: -470px
+    
+}
+
+.titles2 {
+    
+    margin-left: -620px
+    
+}
+
+.mySlides {
+    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-right: auto;
+    
+    margin-top: 25px;
+    
+    
+}
+
+.wrapper {
+    text-align: center;
+}
+
+.button {
+    position: absolute;
+    top: 50%;
+}
+
+w3-left{
+    
+    width: 10%;
+    
+}
+
+
+
+.buttonCon {
+    width: 50%;
+    height: 25px;
+    
+    margin: auto;
+    padding: 10px;
+}
+.w3-left {
+    width: 2.5%;
+    height: 25px;
+    
+    margin-top: -450px;
+    margin-left: -550px;
+}
+.w3-right {
+    margin-left: 1780px;
+    height: 25px;
+    width: 2.5%;
+    margin-top:-25px;
+    
+    
+}
+
+
+
+@media all and (max-width: 550px) {
     .nav label {
         display: block;
         cursor: pointer;
         position: relative;
         margin-left: 0px;
         margin-top: -10px;
-        
+        z-index: 100;
     }
     .menu {
         text-align: center;
@@ -211,7 +448,7 @@ header{
         display: none;
         margin-top: 45px;
         margin-left: auto;
-        background-color: #15223C;
+        position: relative; 
     }
     .menu a {
         position: relative;
@@ -223,19 +460,14 @@ header{
         margin-top: -40px;;
         margin-left: 70px;
         font-size: 20px;
-        z-index: 1500;
-        
+        margin-bottom: -40px;
     }
     form{
-        
+        z-index: -100;
         width: auto;
     }
     #toggle:checked + .menu {
         display: block;
-    }
-    
-    .main-header{
-        width: 1100px;
     }
     .signUp{
         z-index: -100;
@@ -243,35 +475,105 @@ header{
     .logIn{
         z-index: -100;
     }
+    .main-header{
+        width: 120%;
+    }
+    .footer{
+        width: 120%;
+    }
     .main-header img{
         height: 90px;
         width: 120px;
         margin-left: 5px;
     }
-    .main-header{
-        width: 1100px;
-        height: 90px;
-    }
     .gallery-page img{
         margin-left: auto;
-        height: 90%;
-        width: 90%;
+        height: 140px;
+        width: 140px;
         margin-top: 10px;
         margin-right: auto;
+
     }
     .gallery-page{
-        align-content: center;
-        height: 600px;
-        width: 600px;
-        display: grid;
+        align-content: left;
+        height: 300px;
+        width: 300px;
         padding: 0;
-        grid-template-columns: 2fr 2fr;
-        grid-template-rows: 1fr 1fr;
+        margin-left: auto;
+        margin-right: auto; 
+        z-index: auto;
     }
-    .footer{
-        width: 1100px;   
+    .logIn input {
+        width: 90%;  
+    }
+    .logIn input[type=submit] {
+        width: 90%;
+    }
+    .signUp input {
+        width: 100%;
+    }
+    .signUp input[type=submit] {
+        width: 100%;
+    }
+    .body{
+       margin-left: auto;
+       margin-right: auto;         
+    }
+    .admin input {
+        width: 90%;
+    }
+    .admin input[type=submit] {
+        width: 90%;
+    }
+    .admin input {
+        width: 100%;
+    }
+    .admin input[type=submit] {
+        width: 100%;    
+    }
+    .column {
+        -ms-flex: 50%;
+        flex: 50%;
+        max-width: 50%;
+    }
+        .profilePic{
+        float: left;
+        height:100px;
+        width: 120px;
+        margin-top: -20px;
+        margin-left: 10px;
+    }
+   .profile-container p{
+        font-size: 18px;
+        margin-top: 20px;
+        margin-left: 90px;
+    }
+    .profButton input[type=submit]{
+        text-transform: uppercase;
+        outline: 0;
+        background: #444;
+        width: 150px;
+        border: 0;
+        padding: 8px;
+        color: #FFFFFF;
+        font-size: 14px;
+        cursor: pointer;
+        margin-left: 30px;
     }
 
+    .profButton .uploadButton{
+        margin-top: 200px;
+    }
+    
+    
+}
+@media all and (max-width: 700px){
+    ul.breadcrumb {
+    padding: 5px 16px;
+    list-style: none;
+    margin-top:-55px;
+    }
+    
     .logIn input {
         width: 90%;
     }
@@ -285,5 +587,28 @@ header{
     .signUp input[type=submit] {
         width: 100%;
     }
+    .body{
+       margin-left: auto;
+       margin-right: auto;         
+    }
+    .gallery-page img{
+        margin-left: auto;
+        height: 250px;
+        width: 250px;
+        margin-top: 10px;
+        margin-right: auto;
+        display: block;
+    }
+    .gallery-page{
+        align-content: left;
+        height: auto;
+        width: auto;
+        display: block;
+        padding: 0;
+        margin-left: auto;
+        margin-right: auto;   
+    }
 }
+
+
 
