--- a/css/font.css
+++ b/css/font.css
@@ -10,6 +10,18 @@
   text-transform: uppercase;
   font-size: 14px;
 }
+.logIn {
+    font-family: sans-serif;
+    text-align: center;
+}
+.logIn input {
+    font-family: sans-serif;
+    font-size: 14px;
+}
+.logIn input[type=submit] {
+  text-transform: uppercase;
+  font-size: 14px;
+}
 .signUp {
     font-family: sans-serif;
     text-align: center;
@@ -29,10 +41,6 @@
 .admin input {
     font-family: sans-serif;
     font-size: 14px;
-}
-.signUp input[type=submit] {
-  text-transform: uppercase;
-  font-size: 14px;
 }
 .logIn h6{
     font-size: 15px;
@@ -60,3 +68,8 @@ h6{
   text-align: center;
   font-size: 30px; 
 }
+/*
+@font-face{
+    font-family: open sans;
+    src: url(fonts/OpenSans-Regular);
+}*/
